<resources>
    <string name="app_name">Scan car pricing (gitub)</string>

    <string name="hello_world">Scan Vin here</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_scanner">Scanner</string>


    <string name="loading">Loading</string>
    <string name="add_notes">Add notes</string>
    <string name="title_activity_show_car_details">Show Car Details</string>
    <string name="scan_vin">Scan Vin</string>
    <string name="update_price">Update</string>
    <string name="show_car_details">Show Car Details</string>
    <string name="outstanding">Outstanding</string>
    <string name="clean">Clean</string>
    <string name="average">Average</string>
    <string name="rough">Rough</string>
    <string name="damaged">Damaged</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_activity_main_page_viewer">ActivityMainPageViewer</string>
    <string name="fixed_place_fragment">This should be fixed.</string>
    <string name="buttonHistoryShowDetails">Show Details</string>
    <string name="CarHistoryHeader">History of viewed automobiles</string>
    <string name="ScanAnotherCar">Another car</string>
    <string name="TakePhoto">Choose Photo</string>
    <string name="PrivateParty">Private Party:</string>
    <string name="TradeIn">Trade-in:</string>
    <string name="Retail">Retail:</string>
    <string name="MSRP">MSRP:</string>
    <string name="ViewOnMap">View On Map</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more_info_placeholder">How to use...</string>
    <string name="test1">Vin Entry</string>
    <string name="test2">History</string>
    <string name="test3">More Info</string>
    <string name="title_activity_car_history_map">Map</string>
    <string name="title_activity_maps_activity2">Map</string>
</resources>
