<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.maciek.testapplication2.ShowCarDetails">

    <TextView
        android:id="@+id/textViewCarDetails"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading" />

    <Button
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/update_price"
        android:layout_marginTop="65dp"
        android:layout_alignParentTop="true"
        android:onClick="updateClick"  />

    <EditText
        android:id="@+id/editTextMiles"
        android:layout_width="wrap_content"
        android:textColor="#000000"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_alignParentTop="true"
        android:inputType="number"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radiogroup_condition"
        android:layout_marginTop="150dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/radio_outstanding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outstanding"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_clean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clean"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/average"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_rough"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rough"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_damaged"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/damaged"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <TextView
        android:textColor="#000000"
        android:id="@+id/textViewCarPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp"
        android:layout_alignParentTop="true"
        android:text="@string/loading" />

    <Button
        android:text="@string/ScanAnotherCar"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:onClick="navigateHomeClick"
        android:layout_gravity="bottom"/>

</RelativeLayout>
