<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.quickcarprice.activities.ActivityMainPageViewer">

    <TextView android:layout_width="70dp" android:layout_height="25dp"
        android:onClick="clickOption1"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="0dp"
        android:id="@+id/option1"
        android:text="@string/test1" />

    <TextView android:layout_width="70dp" android:layout_height="25dp"
        android:onClick="clickOption2"
        android:layout_marginLeft="83dp"
        android:layout_marginTop="0dp"
        android:id="@+id/option2"
        android:text="@string/test2" />

    <TextView android:layout_width="70dp" android:layout_height="25dp"
        android:onClick="clickOption3"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="0dp"
        android:id="@+id/option3"
        android:text="@string/test3" />

    <View
        android:id="@+id/viewRectangle"
        android:layout_marginTop="20dp"
        android:layout_width="63dp"
        android:layout_height="5dp"
        android:background="@drawable/rectangle"/>

    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
        android:layout_marginTop="35dp"
        android:visibility="gone"
        android:id="@+id/textViewMainPageViewer"
        android:text="@string/fixed_place_fragment" />

    <android.support.v4.view.ViewPager
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mainPager"
        android:layout_marginTop="75dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>
